Fix buttons not middle aligned

--- a/app/assets/stylesheets/sephora_style_guide/components/_buttons.scss
+++ b/app/assets/stylesheets/sephora_style_guide/components/_buttons.scss
@@ -3,7 +3,7 @@
   display: inline-block;
   @include font-avalon-bold;
   letter-spacing: 1px;
-  line-height: $btn-line-height;
+  line-height: 16px;
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
@@ -15,8 +15,12 @@
   -webkit-appearance: none;
   -webkit-border-radius: 0;
 
-  @include button-size($btn-padding-y, $btn-padding-x, $font-size-base);
+  @include button-size($btn-padding-y, $btn-padding-x, $btn-font-size);
   @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
+
+  @include media-breakpoint-up(md) {
+    @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $btn-font-size-sm);
+  }
 
   &,
   &:active,
@@ -69,11 +73,11 @@
 
 // Button Sizes
 .btn-lg {
-  @include button-size($btn-padding-y-lg, $btn-padding-x-lg, $font-size-lg);
+  @include button-size($btn-padding-y-lg, $btn-padding-x-lg, $btn-font-size-lg);
 }
 
 .btn-sm {
-  @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $font-size-sm);
+  @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $btn-font-size-sm);
 }
 
 // Block button
