--- a/app/assets/stylesheets/sephora_style_guide/mixins/_buttons.scss
+++ b/app/assets/stylesheets/sephora_style_guide/mixins/_buttons.scss
@@ -1,6 +1,6 @@
 // Button sizes
 @mixin button-size($padding-y, $padding-x, $font-size) {
-  padding: $padding-y $padding-x;
+  padding: ($padding-y + 1px) $padding-x ($padding-y - 1px);
   font-size: $font-size;
 }
 
