--- a/app/assets/stylesheets/sephora_style_guide/variables/_buttons.scss
+++ b/app/assets/stylesheets/sephora_style_guide/variables/_buttons.scss
@@ -1,5 +1,4 @@
-$btn-padding-x:           10px;
-$btn-padding-y:           12px;
+
 $btn-line-height:         1;
 $btn-border-width:        1px;
 
@@ -24,10 +23,16 @@ $btn-disabled-bg:         $grey-light;
 $btn-disabled-border:     $grey-light;
 
 $btn-padding-x-sm:        10px !default;
-$btn-padding-y-sm:        12px !default;
+$btn-padding-y-sm:        7px;
+$btn-font-size-sm:        14px;
+
+$btn-padding-x:           10px;
+$btn-padding-y:           11px;
+$btn-font-size:           16px;
 
 $btn-padding-x-lg:        19px !default;
-$btn-padding-y-lg:        11px !default;
+$btn-padding-y-lg:        13.5px;
+$btn-font-size-lg:        16px;
 
 $btn-block-spacing-y:     10px;
 // $btn-toolbar-margin:      .5rem;
